Switches directly control lights now

--- a/packages/backroom.yaml
+++ b/packages/backroom.yaml
@@ -28,44 +28,44 @@ switch:
             entity_id: light.backroom_lights
             transition: 1
 
-automation:
-  - alias: Backroom Switch1
-    trigger:
-    - entity_id: binary_sensor.backroom_switch1
-      platform: state
-      to: 'on'
-    action:
-    - entity_id: light.backroom_lights
-      service: light.turn_on
-      data_template:
-        transition: 1
-        brightness_pct: 100
-        white_value: 255
-        color_temp: 370
-    - entity_id: light.craft_room
-      service: light.turn_on
-      data_template:
-        transition: 1
-        brightness_pct: 100
-        white_value: 255
-        color_temp: 370
-  - alias: Backroom Switch2
-    trigger:
-    - entity_id: binary_sensor.backroom_switch2
-      platform: state
-      to: 'on'
-    action:
-    - entity_id: switch.backroom_relay_1
-      service: switch.turn_on
-  - alias: Backroom Switch3
-    trigger:
-    - entity_id: binary_sensor.backroom_switch3
-      platform: state
-      to: 'on'
-    action:
-    - entity_id: light.backroom_lights
-      service: light.turn_off
-    - entity_id: light.craft_room
-      service: light.turn_off
-    - entity_id: switch.backroom_relay_1
-      service: switch.turn_off
+# automation:
+#   - alias: Backroom Switch1
+#     trigger:
+#     - entity_id: binary_sensor.backroom_switch1
+#       platform: state
+#       to: 'on'
+#     action:
+#     - entity_id: light.backroom_lights
+#       service: light.turn_on
+#       data_template:
+#         transition: 1
+#         brightness_pct: 100
+#         white_value: 255
+#         color_temp: 370
+#     - entity_id: light.craft_room
+#       service: light.turn_on
+#       data_template:
+#         transition: 1
+#         brightness_pct: 100
+#         white_value: 255
+#         color_temp: 370
+#   - alias: Backroom Switch2
+#     trigger:
+#     - entity_id: binary_sensor.backroom_switch2
+#       platform: state
+#       to: 'on'
+#     action:
+#     - entity_id: switch.backroom_relay_1
+#       service: switch.turn_on
+#   - alias: Backroom Switch3
+#     trigger:
+#     - entity_id: binary_sensor.backroom_switch3
+#       platform: state
+#       to: 'on'
+#     action:
+#     - entity_id: light.backroom_lights
+#       service: light.turn_off
+#     - entity_id: light.craft_room
+#       service: light.turn_off
+#     - entity_id: switch.backroom_relay_1
+#       service: switch.turn_off
