--- a/packages/bedroom.yaml
+++ b/packages/bedroom.yaml
@@ -82,50 +82,50 @@ automation:
         brightness: 80
     - entity_id: switch.bedroom_relay_1
       service: switch.turn_on
-  - alias: Main Bedroom - Switch1
-    trigger:
-    - entity_id: binary_sensor.bedroom_switch1
-      platform: state
-      to: 'on'
-    - entity_id: sensor.bedroom_dimmer_action
-      platform: state
-      to: 'on-press'
-    action:
-    - entity_id: light.bedroom_lights
-      service: light.turn_on
-      data:
-        transition: 1
-        brightness: 255
-        color_temp: 450
-    - entity_id: switch.bedroom_relay_1
-      service: switch.turn_on
-  - alias: Main Bedroom - Switch2
-    trigger:
-    - entity_id: binary_sensor.bedroom_switch2
-      platform: state
-      to: 'on'
-    - entity_id: sensor.bedroom_dimmer_action
-      platform: state
-      to: 'up-press'
-    action:
-    - entity_id: light.bedroom_lights
-      service: light.turn_on
-      data:
-        transition: 1
-        brightness: 125
-        color_temp: 450
-    - entity_id: switch.bedroom_relay_1
-      service: switch.turn_on
-  - alias: Main Bedroom - Switch3
-    trigger:
-    - entity_id: binary_sensor.bedroom_switch3
-      platform: state
-      to: 'on'
-    - entity_id: sensor.bedroom_dimmer_action
-      platform: state
-      to: 'off-press'
-    action:
-    - entity_id: light.bedroom_lights
-      service: light.turn_off
-      data:
-        transition: 1
+  # - alias: Main Bedroom - Switch1
+  #   trigger:
+  #   - entity_id: binary_sensor.bedroom_switch1
+  #     platform: state
+  #     to: 'on'
+  #   - entity_id: sensor.bedroom_dimmer_action
+  #     platform: state
+  #     to: 'on-press'
+  #   action:
+  #   - entity_id: light.bedroom_lights
+  #     service: light.turn_on
+  #     data:
+  #       transition: 1
+  #       brightness: 255
+  #       color_temp: 450
+  #   - entity_id: switch.bedroom_relay_1
+  #     service: switch.turn_on
+  # - alias: Main Bedroom - Switch2
+  #   trigger:
+  #   - entity_id: binary_sensor.bedroom_switch2
+  #     platform: state
+  #     to: 'on'
+  #   - entity_id: sensor.bedroom_dimmer_action
+  #     platform: state
+  #     to: 'up-press'
+  #   action:
+  #   - entity_id: light.bedroom_lights
+  #     service: light.turn_on
+  #     data:
+  #       transition: 1
+  #       brightness: 125
+  #       color_temp: 450
+  #   - entity_id: switch.bedroom_relay_1
+  #     service: switch.turn_on
+  # - alias: Main Bedroom - Switch3
+  #   trigger:
+  #   - entity_id: binary_sensor.bedroom_switch3
+  #     platform: state
+  #     to: 'on'
+  #   - entity_id: sensor.bedroom_dimmer_action
+  #     platform: state
+  #     to: 'off-press'
+  #   action:
+  #   - entity_id: light.bedroom_lights
+  #     service: light.turn_off
+  #     data:
+  #       transition: 1
