--- a/automation/holidays.yaml
+++ b/automation/holidays.yaml
@@ -1,4 +1,4 @@
-- alias: All off each night - HOLIDAYS
+- alias: Holidays - All off each night
   trigger:
     platform: time
     at: '21:30:00'
@@ -7,7 +7,7 @@
   - service: scene.turn_on
     data:
       entity_id: scene.all_off
-- alias: All off each morn - HOLIDAYS
+- alias: Holidays - All off each morning
   trigger:
     platform: time
     at: '10:31:00'
@@ -16,7 +16,7 @@
   - service: scene.turn_on
     data:
       entity_id: scene.all_off
-- alias: All off each day - HOLIDAYS
+- alias: Holidays - All off each day
   trigger:
     platform: time
     at: '16:31:00'
