--- a/google.yaml
+++ b/google.yaml
@@ -30,15 +30,13 @@ entity_config:
     expose: true
   scene.turn_off:
     expose: true
-  camera.minicam:
+  camera.backroom:
     expose: true
   camera.backyard:
     expose: true
-  camera.camera2:
-    expose: true
   camera.carport:
     expose: true
-  camera.backroom:
+  camera.livingroom:
     expose: true
   light.office_lights:
     expose: true
@@ -70,7 +68,9 @@ entity_config:
     expose: true
   light.toilet:
     expose: true
-  switch.christmas_tree:
+  light.laundry_toilet:
+    expose: true
+  light.laundry:
     expose: true
   switch.powerboard_outlet_1:
     expose: true
