--- a/customize.yaml
+++ b/customize.yaml
@@ -38,7 +38,6 @@ light.carport_lights:
   friendly_name: Carport
 switch.christmas_tree:
   icon: mdi:pine-tree
-switch.powerboard_outlet_4:
-  icon: mdi:radio
+switch.powerboard_outlet_4: {}
 switch.christmas_lights_bright:
   friendly_name: Christmas Lights Bright
