--- a/packages/christmas.yaml
+++ b/packages/christmas.yaml
@@ -1,122 +1,122 @@
-automation:
-  - alias: Christmas Lights on
-    id: christmas_lights_on
-    trigger:
-      platform: time
-      at: '18:00:00'
-    action:
-      - entity_id: switch.powerboard_outlet_4
-        service: homeassistant.turn_on
-      - entity_id: switch.powerboard2_outlet_1
-        service: homeassistant.turn_on
-      - entity_id: switch.powerboard2_outlet_2
-        service: homeassistant.turn_on
-      - entity_id: switch.powerboard2_outlet_3
-        service: homeassistant.turn_on
-      - service: homeassistant.turn_on
-        entity_id: switch.christmas_lights_bright
-  - alias: Christmas Lights Dim
-    id: christmas_lights_dim
-    trigger:
-      platform: time
-      at: '21:30'
-    action:
-      - service: homeassistant.turn_off
-        entity_id: switch.christmas_lights_bright        
-  - alias: Christmas Lights off
-    id: christmas_lights_off
-    trigger:
-      platform: time
-      at: '23:00:00'
-    action:
-      - entity_id: switch.powerboard_outlet_4
-        service: homeassistant.turn_off
-      - entity_id: switch.powerboard2_outlet_1
-        service: homeassistant.turn_off
-      - entity_id: switch.powerboard2_outlet_3
-        service: homeassistant.turn_off
-      - entity_id: script.shutdown_panel
-        service: script.turn_on
-  - alias: Christmas Tree on
-    id: christmas_tree_on
-    trigger:
-      platform: time
-      at: '06:00:00'
-    action:
-      - entity_id: switch.christmas_tree
-        service: homeassistant.turn_on
-  - alias: Christmas Tree off
-    id: christmas_tree_off
-    trigger:
-      platform: time
-      at: '23:00:00'
-    action:
-      - entity_id: switch.christmas_tree
-        service: homeassistant.turn_off
+# automation:
+#   - alias: Christmas Lights on
+#     id: christmas_lights_on
+#     trigger:
+#       platform: time
+#       at: '18:00:00'
+#     action:
+#       - entity_id: switch.powerboard_outlet_4
+#         service: homeassistant.turn_on
+#       - entity_id: switch.powerboard2_outlet_1
+#         service: homeassistant.turn_on
+#       - entity_id: switch.powerboard2_outlet_2
+#         service: homeassistant.turn_on
+#       - entity_id: switch.powerboard2_outlet_3
+#         service: homeassistant.turn_on
+#       - service: homeassistant.turn_on
+#         entity_id: switch.christmas_lights_bright
+#   - alias: Christmas Lights Dim
+#     id: christmas_lights_dim
+#     trigger:
+#       platform: time
+#       at: '21:30'
+#     action:
+#       - service: homeassistant.turn_off
+#         entity_id: switch.christmas_lights_bright        
+#   - alias: Christmas Lights off
+#     id: christmas_lights_off
+#     trigger:
+#       platform: time
+#       at: '23:00:00'
+#     action:
+#       - entity_id: switch.powerboard_outlet_4
+#         service: homeassistant.turn_off
+#       - entity_id: switch.powerboard2_outlet_1
+#         service: homeassistant.turn_off
+#       - entity_id: switch.powerboard2_outlet_3
+#         service: homeassistant.turn_off
+#       - entity_id: script.shutdown_panel
+#         service: script.turn_on
+#   - alias: Christmas Tree on
+#     id: christmas_tree_on
+#     trigger:
+#       platform: time
+#       at: '06:00:00'
+#     action:
+#       - entity_id: switch.christmas_tree
+#         service: homeassistant.turn_on
+#   - alias: Christmas Tree off
+#     id: christmas_tree_off
+#     trigger:
+#       platform: time
+#       at: '23:00:00'
+#     action:
+#       - entity_id: switch.christmas_tree
+#         service: homeassistant.turn_off
 
-shell_command:
-  shutdown_panel: 'curl http://192.168.86.6/runEventScript.php\?scriptName\=Shutdown.sh'
+# shell_command:
+#   shutdown_panel: 'curl http://192.168.86.6/runEventScript.php\?scriptName\=Shutdown.sh'
 
-script:
-  shutdown_panel:
-    alias: 'Shutdown LED Panel'
-    sequence:
-      - service: shell_command.shutdown_panel
-      - delay:
-          seconds: 30
-      - service: homeassistant.turn_off
-        data:
-          entity_id: switch.powerboard2_outlet_2
+# script:
+#   shutdown_panel:
+#     alias: 'Shutdown LED Panel'
+#     sequence:
+#       - service: shell_command.shutdown_panel
+#       - delay:
+#           seconds: 30
+#       - service: homeassistant.turn_off
+#         data:
+#           entity_id: switch.powerboard2_outlet_2
 
-sensor:
-  - platform: mqtt
-    name: "FPP Repeat Status"
-    state_topic: "hassio/falcon/player/FPP/playlist/repeat/status"
-  - platform: mqtt
-    name: "FPP Status"
-    state_topic: "hassio/falcon/player/FPP/status"
-  - platform: mqtt
-    name: "FPP Brightness"
-    state_topic: "hassio/falcon/player/FPP/Brightness"
+# sensor:
+#   - platform: mqtt
+#     name: "FPP Repeat Status"
+#     state_topic: "hassio/falcon/player/FPP/playlist/repeat/status"
+#   - platform: mqtt
+#     name: "FPP Status"
+#     state_topic: "hassio/falcon/player/FPP/status"
+#   - platform: mqtt
+#     name: "FPP Brightness"
+#     state_topic: "hassio/falcon/player/FPP/Brightness"
 
-light:
-  - platform: template
-    lights:
-      christmas_lights:
-        friendly_name: "Christmas Lights"
-        value_template: >-
-          {% if is_state('sensor.fpp_status','idle') %}
-            off
-          {% else %}
-            on
-          {% endif %}
-        turn_on:
-          - service: mqtt.publish
-            data:
-              topic: "hassio/falcon/player/FPP/set/playlist/2019/start"
-              payload: ""
-          - service: mqtt.publish
-            data:
-              topic: "hassio/falcon/player/FPP/set/playlist/2019/repeat"
-              payload: ""
-        turn_off:
-          - service: mqtt.publish
-            data:
-              topic: "hassio/falcon/player/FPP/set/playlist/2019/stop/now"
-              payload: ""
+# light:
+#   - platform: template
+#     lights:
+#       christmas_lights:
+#         friendly_name: "Christmas Lights"
+#         value_template: >-
+#           {% if is_state('sensor.fpp_status','idle') %}
+#             off
+#           {% else %}
+#             on
+#           {% endif %}
+#         turn_on:
+#           - service: mqtt.publish
+#             data:
+#               topic: "hassio/falcon/player/FPP/set/playlist/2019/start"
+#               payload: ""
+#           - service: mqtt.publish
+#             data:
+#               topic: "hassio/falcon/player/FPP/set/playlist/2019/repeat"
+#               payload: ""
+#         turn_off:
+#           - service: mqtt.publish
+#             data:
+#               topic: "hassio/falcon/player/FPP/set/playlist/2019/stop/now"
+#               payload: ""
 
-switch:
-  - platform: template
-    switches:
-      christmas_lights_bright:
-        value_template: "{{ is_state('sensor.fpp_brightness','100') }}"
-        turn_on:
-          service: mqtt.publish
-          data:
-            topic: "hassio/falcon/player/FPP/Brightness"
-            payload: "100"
-        turn_off:
-          service: mqtt.publish
-          data:
-            topic: "hassio/falcon/player/FPP/Brightness"
-            payload: "50"
+# switch:
+#   - platform: template
+#     switches:
+#       christmas_lights_bright:
+#         value_template: "{{ is_state('sensor.fpp_brightness','100') }}"
+#         turn_on:
+#           service: mqtt.publish
+#           data:
+#             topic: "hassio/falcon/player/FPP/Brightness"
+#             payload: "100"
+#         turn_off:
+#           service: mqtt.publish
+#           data:
+#             topic: "hassio/falcon/player/FPP/Brightness"
+#             payload: "50"
