--- a/configuration.yaml
+++ b/configuration.yaml
@@ -48,7 +48,9 @@ http:
 
 entity_controller:
   entry_motion_light:
-    sensor: binary_sensor.entry_motion_sensor_occupancy
+    sensor:
+      - binary_sensor.entry_motion_sensor_occupancy
+      - binary_sensor.carport_camera_motion
     entity: light.carport_lights
     delay: 180
     start_time: sunset - 00:30:00
