--- a/packages/xander.yaml
+++ b/packages/xander.yaml
@@ -2,7 +2,7 @@ light:
   - platform: group
     name: Xander Lights
     entities:
-      - light.xander_bedroom_light_light
+      - light.xander
 
 switch:
   - platform: template
@@ -32,21 +32,37 @@ climate:
     initial_hvac_mode: "off"
 
 automation:
-  - alias: Dimmer - Xander Bedroom
+  - alias: Dimmer - Xander Bedroom White
     trigger:
     - entity_id: sensor.xander_dimmer_action
       platform: state
     condition:
       - condition: template
-        value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
+        value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'off-press'] }}"
     action:
     - entity_id: light.xander_lights
       service: light.turn_on
       data_template:
         transition: 1
+        color_temp: 450
         brightness_pct: >
           {% if trigger.to_state.state == 'on-press' %} 100
           {% elif trigger.to_state.state == 'up-press' %} 50
-          {% elif trigger.to_state.state == 'down-press' %} 1
           {% elif trigger.to_state.state == 'off-press' %} 0
           {% endif %}
+        effect: 0
+  - alias: Dimmer - Xander Bedroom Colour
+    trigger:
+    - entity_id: sensor.xander_dimmer_action
+      platform: state
+    condition:
+      - condition: template
+        value_template: "{{ trigger.to_state.state in ['down-press']}}"
+    action:
+    - entity_id: light.xander_lights
+      service: light.turn_on
+      data_template:
+        transition: 1
+        color_name: blue
+        brightness_pct: 100
+        effect: 2
