--- a/packages/bedroom.yaml
+++ b/packages/bedroom.yaml
@@ -37,19 +37,19 @@ automation:
     alias: Main bedroom - Kid indicator
     trigger:
       - platform: state
-        entity_id: light.lucas
+        entity_id: light.lucas_lights
       - platform: state
-        entity_id: light.xander_bedroom_light
+        entity_id: light.xander_lights
     condition: []
     action:
       service: light.turn_on
       data_template:
         entity_id: light.bedroom_led
-        brightness_pct: "{% if is_state('light.lucas', 'off') and is_state('light.xander_bedroom_light_light', 'off') %}0{% else %}40{% endif %}"
+        brightness_pct: "{% if is_state('light.lucas_lights', 'off') and is_state('light.xander_lights', 'off') %}0{% else %}40{% endif %}"
         color_name: >
-          {% if is_state('light.lucas', 'on') and is_state('light.xander_bedroom_light_light', 'on') %} red
-          {% elif is_state('light.lucas', 'off') and is_state('light.xander_bedroom_light_light', 'on') %} green
-          {% elif is_state('light.lucas', 'on') and is_state('light.xander_bedroom_light_light', 'off') %} blue
+          {% if is_state('light.lucas_lights', 'on') and is_state('light.xander_lights', 'on') %} red
+          {% elif is_state('light.lucas_lights', 'off') and is_state('light.xander_lights', 'on') %} green
+          {% elif is_state('light.lucas_lights', 'on') and is_state('light.xander_lights', 'off') %} blue
           {% else %} white
           {% endif %}
   - id: main_bedroom_night_mode
