--- a/esphome/washing.yaml
+++ b/esphome/washing.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: koganpow1
+  name: washing
   platform: ESP8266
   board: esp01_1m
 
@@ -21,16 +21,26 @@ binary_sensor:
       number: GPIO0
       mode: INPUT_PULLUP
       inverted: True
-    name: "koganpow1 Button"
+    name: "Washing Button"
     on_press:
       - switch.toggle: relay
+  - platform: template
+    name: "Washing Active"
+    lambda: |-
+      if (id(power).state > 100 ) {
+        return true;
+      } else {
+        return false;
+      }
 
 switch:
   - platform: gpio
-    name: "koganpow1"
+    name: "Washing"
     pin: GPIO14
     id: relay
     inverted: no
+    icon: mdi:washing-machine
+    restore_mode: ALWAYS_ON
 
 status_led:
   pin:
@@ -43,9 +53,16 @@ sensor:
     cf_pin: GPIO4
     cf1_pin: GPIO5
     current:
-      name: "koganpow1 Current"
+      name: "Washing Current"
+      unit_of_measurement: A
     voltage:
-      name: "koganpow1 Voltage"
+      name: "Washing Voltage"
+      unit_of_measurement: V
     power:
-      name: "koganpow1 Power"
+      name: "Washing Watts"
+      id: power
+      unit_of_measurement: W
+    change_mode_every: 8
+    current_resistor: 0.00087
+    voltage_divider: 2030
     update_interval: 5s
