Don't change lights

--- a/automation/presence.yaml
+++ b/automation/presence.yaml
@@ -10,12 +10,12 @@
     condition: template
     value_template: "{% if not (is_state('person.chris', 'home') or is_state('person.mel', 'home')) %} true {% else %} false {% endif %}"
   action:
-    - service: switch.toggle
-      entity_id: switch.backroom_ptz_away
-    - service: light.turn_off
-      entity_id: group.all_lights
-    - service: light.turn_off
-      entity_id: group.all_strips
+    #- service: switch.toggle
+    #  entity_id: switch.backroom_ptz_away
+    #- service: light.turn_off
+    #  entity_id: group.all_lights
+    #- service: light.turn_off
+    #  entity_id: group.all_strips
     - service: notify.hangout_notify
       data:
         message: "Feeling lonely"
