--- a/packages/craftroom.yaml
+++ b/packages/craftroom.yaml
@@ -25,7 +25,7 @@ switch:
               transition: 1
 
 automation:
-  - alias: Dimmer - Craftroom
+  - alias: Craftroom - Dimmer
     trigger:
     - entity_id: sensor.craftroom_dimmer_action
       platform: state
