--- a/packages/xander.yaml
+++ b/packages/xander.yaml
@@ -32,7 +32,7 @@ climate:
     initial_hvac_mode: "off"
 
 automation:
-  - alias: Dimmer - Xander Bedroom White
+  - alias: Xander - Dimmer White
     trigger:
     - entity_id: sensor.xander_dimmer_action
       platform: state
@@ -51,7 +51,7 @@ automation:
           {% elif trigger.to_state.state == 'off-press' %} 0
           {% endif %}
         effect: 0
-  - alias: Dimmer - Xander Bedroom Colour
+  - alias: Xander - Dimmer Colour
     trigger:
     - entity_id: sensor.xander_dimmer_action
       platform: state
