--- a/esphome/kitchen.yaml
+++ b/esphome/kitchen.yaml
@@ -2,9 +2,10 @@ esphome:
   name: kitchen
   platform: ESP8266
   board: esp01_1m
+
 wifi:
-  ssid: virus
-  password: ithankthegoodness
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
 
 # Enable logging
 logger:
