--- a/esphome/powermeter.yaml
+++ b/esphome/powermeter.yaml
@@ -4,8 +4,8 @@ esphome:
   board: esp01_1m
 
 wifi:
-  ssid: virus
-  password: ithankthegoodness
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
 
 # Enable logging
 logger:
@@ -24,13 +24,14 @@ uart:
 sensor:
   - platform: pzemac
     current:
-      name: "PZEM-004T V3 Current"
+      name: "House Current"
     voltage:
-      name: "PZEM-004T V3 Voltage"
+      name: "House Voltage"
     power:
-      name: "PZEM-004T V3 Power"
+      name: "House Power"
     frequency:
-      name: "PZEM-004T V3 Frequency"
+      name: "House Frequency"
     power_factor:
-      name: "PZEM-004T V3 Power Factor"
+      name: "House Power Factor"
     update_interval: 60s
+    address: 1
