--- a/packages/hall.yaml
+++ b/packages/hall.yaml
@@ -56,7 +56,7 @@ automation:
       - platform: state
         entity_id: light.xander_lights
         to: 'on'
-        for: 0:00:03
+    #    for: 0:00:01
     condition:
       condition: and
       conditions:
@@ -77,7 +77,7 @@ automation:
       - platform: state
         entity_id: light.xander_lights
         to: 'off'
-        for: 0:00:03
+    #    for: 0:00:01
     condition:
       condition: and
       conditions:
