input_select for AC state

--- a/input_select.yaml
+++ b/input_select.yaml
@@ -7,3 +7,11 @@ livingroom_amp_input:
   options:
     - "Media Player"
     - "PS4"
+livingroom_ac_state:
+  options:
+    - "Heat"
+    - "Cool"
+    - "Auto"
+    - "Dry"
+    - "Fan"
+    - "Off"
