--- a/packages/kitchen.yaml
+++ b/packages/kitchen.yaml
@@ -4,7 +4,6 @@ light:
     entities:
       - light.kitchen_back
       - light.kitchen_front
-      - light.kitchen_counter_light
 
 switch:
   - platform: template
@@ -32,6 +31,7 @@ fan:
       kitchen_fan:
         friendly_name: "Kitchen Fan"
         value_template: "{{ states('switch.kitchen_relay_3.state') }}"
+        speed:
         turn_on:
           service: switch.turn_on
           data:
