--- a/packages/office.yaml
+++ b/packages/office.yaml
@@ -33,7 +33,74 @@ climate:
     target_sensor: sensor.office_temperature
     initial_hvac_mode: "off"
 
+fan:
+  - platform: mqtt
+    name: "Office Fan"
+    command_topic: "Office_Fan/cmnd/FanSpeed"
+    speed_command_topic: "Office_Fan/cmnd/FanSpeed"
+    state_topic: "Office_Fan/stat/RESULT"
+    speed_state_topic: "Office_Fan/stat/RESULT"
+    state_value_template: >
+      {% if value_json.FanSpeed is defined %}
+        {% if value_json.FanSpeed == 0 -%}0{%- elif value_json.FanSpeed > 0 -%}4{%- endif %}
+      {% else %}
+        {% if states.fan.Office_Fan.state == 'off' -%}0{%- elif states.fan.Office_Fan.state == 'on' -%}4{%- endif %}
+      {% endif %}
+    speed_value_template: "{{ value_json.FanSpeed }}"
+    availability_topic: Office_Fan/tele/LWT
+    payload_off: "0"
+    payload_on: "4"
+    payload_low_speed: "1"
+    payload_medium_speed: "2"
+    payload_high_speed: "3"
+    payload_available: Online
+    payload_not_available: Offline
+    speeds:
+      - off
+      - low
+      - medium
+      - high
+
 automation:
+  - alias: Office - Switch 1
+    trigger:
+      - entity_id: binary_sensor.office_switch1
+        platform: state
+        to: "on"
+    condition: []
+    action:
+      - entity_id: light.office_lights
+        service: light.turn_on
+        data:
+          transition: 1
+          brightness_pct: 100
+      - entity_id: switch.powerboard_outlet_1
+        service: switch.turn_on
+  - alias: Office - Switch 2
+    trigger:
+      - entity_id: binary_sensor.office_switch2
+        platform: state
+        to: "on"
+    condition: []
+    action:
+      - entity_id: light.office_lights
+        service: light.turn_on
+        data:
+          transition: 1
+          brightness_pct: 50
+      - entity_id: switch.powerboard_outlet_1
+        service: switch.turn_on
+  - alias: Office - Switch 3
+    trigger:
+      - entity_id: binary_sensor.office_switch3
+        platform: state
+        to: "on"
+    condition: []
+    action:
+      - entity_id: light.office_lights
+        service: light.turn_off
+      - entity_id: switch.powerboard_outlet_1
+        service: switch.turn_off
   - alias: Office - Dimmer
     id: office_light
     trigger:
