--- a/groups.yaml
+++ b/groups.yaml
@@ -14,6 +14,7 @@ all_light_relays:
     - switch.bedroom_relay_1
     - switch.lucas_relay_1
     - switch.hallway_relay_1
+    - switch.office_relay_1
 all_lights:
   name: All Lights
   entities:
